src/components/atoms/MediaCard/_MediaCard.module.scss
@use '../../../sass/abstract/variables' as *;
@use '../../../sass/abstract/functions' as *;
@use '../../../sass/abstract/mixins' as *;

.mediacard {
    inline-size: 100%;

    position: relative;


    @media (pointer: fine) {
    //glassmorphic effect doesn't activate upon finger touch
        &:hover {
            .mediacard__container {

                &::after,
                &::before {
                    opacity: 1;
                }
            }
        }
    }


    &--trending {
        max-inline-size: $inline_size_component--lg;

        @include respond_to(min, m_screen) {
            max-inline-size: $inline_size_component--xlg;
        }

        @include respond_to(min, l_screen) {
            max-inline-size: $inline_size_component--xxlg;
        }
    }


    &__button {
        position: absolute;

        top: 2%;
        right: 4%;

        z-index: 3;
    }


    &__link {
        inline-size: 100%;
        border-radius: $radius_pill--xs;
        background-position: top center;
        background-repeat: no-repeat;
        background-size: cover;
    }


    &__container {
        aspect-ratio: 2 / 3;
        display: flex;
        flex-direction: column-reverse;
        border-radius: $radius_pill--xs;
        position: relative;
        overflow: hidden;

        
        &::after {
            content: '';
            position: absolute;
            inset: 0;
            background: rgba(255, 255, 255, 0.05);
            backdrop-filter: blur(7px);
            -webkit-backdrop-filter: blur(7px);
            z-index: 1;
            opacity: 0;

            @include transition(opacity, .3s, ease-in-out);
        }


        &>* {
            position: relative;
            z-index: 2;
        }


        &::before {
            content: '';
            position: absolute;
            top: -1px;
            left: 0;
            right: 0;
            height: 1px;
            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.8), transparent);
            z-index: 3;
            opacity: 0;

            @include transition(opacity, .3s, ease-in-out);
        }


        &--trending {
            padding-inline-start: $padding_inline_control--sm;
            padding-block-end: $padding_block_control--sm_14;

            @include respond_to(min, l_screen) {
                padding-block: $padding_block_control--sm_14 $padding_block_control--md;
                padding-inline: $padding_inline_control--sm;
            }
        }
    }


    &__media_info {
        order: 2;
        padding-block-start: $padding_block_control--sm_14;
    }


    &__media_date_and_type {
        display: flex;
        align-items: center;
        gap: $gap_inline_control--xsm;

        margin-bottom: $margin_block_control--xsm;
    }


    &__text_outside {
        padding-block-start: $padding_block_control--xsm;
    }
}

